<package>
  <name>multi_robot_exploration</name>
  <version>1.0.0</version>
  <description>
    Support for multi-robot exploration.
  </description>
  <maintainer email="ivona.jambrecic@fer.hr">Ivona Jambrečić</maintainer>
  <author>Ivona Jambrečić</author>
  <maintainer email="ana.batinovic@fer.hr">Ana Batinović</maintainer>
  <author>Ana Batinović</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend></build_depend>

</package>


